--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/tracking?createDatabaseIfNotExist=true
+spring.datasource.url = jdbc:mysql://localhost:3306/trackeeV2?createDatabaseIfNotExist=true
 spring.datasource.username = root
 spring.datasource.password = 
-server.port = 8080
+server.port = 1010
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # ==============================================================
